--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>QR Code Component</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/fgavicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
 
